services/singularity/policy/cluster_policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: enforce-non-root-rofs
spec:
  validationFailureAction: enforce
  rules:
    - name: ro-root
      match:
        resources:
          kinds:
            - Pod
      validate:
        pattern:
          spec:
            containers:
              - securityContext:
                  runAsNonRoot: true
                  readOnlyRootFilesystem: true
